--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -14,15 +14,17 @@
     <tr th:each="usuario :${listaUsuarios}">
         <td th:text="${usuario.idcliente}">id</td>
         <td th:text="${usuario.nombre}">nombre</td>
-        <td th:text="${usuario.dni}"> Dni </td>
-        <td th:id="${usuario.idcliente}" class="button1" name="button1" style="cursor:pointer" OnClick="javascript:editar(id)">Editar</td>
+        <td th:text="${usuario.dni}"> Dni</td>
+        <td th:id="${usuario.idcliente}" class="button1" name="button1" style="cursor:pointer"
+            OnClick="javascript:editar(id)">Editar
+        </td>
     </tr>
 </table>
 </body>
 </html>
 
 <script type="text/javascript">
-    function editar(id){
+    function editar(id) {
         window.location = "usuarios/editar?idcliente=" + id;
     }
 </script>
