--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -18,6 +18,9 @@
         </td>
     </tr>
 </table>
+<a class="button1" name="crear" style="cursor:pointer"
+   href="/peliculas/crear">Crear
+</a>
 </body>
 </html>
 
