--- a/src/main/resources/templates/alquileres.html
+++ b/src/main/resources/templates/alquileres.html
@@ -6,7 +6,42 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 60%;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even){background-color: #f2f2f2}
+
+        th {
+            background-color: #1b26f2;
+            color: white;
+        }
+    </style>
+    <style>
+        button {
+            background-color: #1b26f2;
+            border: none;
+            color: white;
+            padding: 10px 27px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            -webkit-transition-duration: 0.4s; /* Safari */
+            transition-duration: 0.4s;
+        }
+    </style>
 </head>
+
 <body>
 <table>
     <tr>
@@ -33,9 +68,11 @@
         </td>
     </tr>
 </table>
-<a class="button1" name="crear" style="cursor:pointer"
+<button>
+<a class="button1" name="crear" style="cursor:pointer;color: #f2f2f2"
    href="/alquileres/crear">Crear
 </a>
+</button>
 </body>
 </html>
 
