--- a/src/main/resources/templates/alquileres.html
+++ b/src/main/resources/templates/alquileres.html
@@ -73,6 +73,11 @@
    href="/alquileres/crear">Crear
 </a>
 </button>
+<button>
+    <a class="button1" name="verLog" style="cursor:pointer;color: #f2f2f2"
+       href="/alquileres/logs">Ver Logs
+    </a>
+</button>
 </body>
 </html>
 
