--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,25 +1,8 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Home Page</title>
-    <style>
-        button {
-            background-color: #1b26f2;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-        }
-        body{
-            text-align: center;
-        }
-    </style>
+
+    <link href="css/styleHome.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <p style="font-size: x-large;font-family: 'Times New Roman';font-style: italic">Welcome to...</p>
