--- a/src/main/resources/templates/peliculaCrear.html
+++ b/src/main/resources/templates/peliculaCrear.html
@@ -15,6 +15,9 @@
     <select id="selectGenero" >
         <option th:each="genero : ${generos}" th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero</option>
     </select>
+    <a class="button1" name="crear" style="cursor:pointer; color: #f2f2f2"
+       href="/generos/crear">Crear Genero
+    </a>
     <br>
     <input type="submit" value="Submit"/>
 </form>
